// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataPoint renders with color amber 1`] = `
<circle
  className="ax-data-point ax-data-point--amber"
  cx={12}
  cy={12}
/>
`;

exports[`DataPoint renders with color blue 1`] = `
<circle
  className="ax-data-point ax-data-point--blue"
  cx={12}
  cy={12}
/>
`;

exports[`DataPoint renders with color brown 1`] = `
<circle
  className="ax-data-point ax-data-point--brown"
  cx={12}
  cy={12}
/>
`;

exports[`DataPoint renders with color chartreuse 1`] = `
<circle
  className="ax-data-point ax-data-point--chartreuse"
  cx={12}
  cy={12}
/>
`;

exports[`DataPoint renders with color green 1`] = `
<circle
  className="ax-data-point ax-data-point--green"
  cx={12}
  cy={12}
/>
`;

exports[`DataPoint renders with color grey 1`] = `
<circle
  className="ax-data-point ax-data-point--grey"
  cx={12}
  cy={12}
/>
`;

exports[`DataPoint renders with color lilac 1`] = `
<circle
  className="ax-data-point ax-data-point--lilac"
  cx={12}
  cy={12}
/>
`;

exports[`DataPoint renders with color orange 1`] = `
<circle
  className="ax-data-point ax-data-point--orange"
  cx={12}
  cy={12}
/>
`;

exports[`DataPoint renders with color pink 1`] = `
<circle
  className="ax-data-point ax-data-point--pink"
  cx={12}
  cy={12}
/>
`;

exports[`DataPoint renders with color purple 1`] = `
<circle
  className="ax-data-point ax-data-point--purple"
  cx={12}
  cy={12}
/>
`;

exports[`DataPoint renders with color rose 1`] = `
<circle
  className="ax-data-point ax-data-point--rose"
  cx={12}
  cy={12}
/>
`;

exports[`DataPoint renders with color teal 1`] = `
<circle
  className="ax-data-point ax-data-point--teal"
  cx={12}
  cy={12}
/>
`;

exports[`DataPoint renders with defaultProps 1`] = `
<circle
  className="ax-data-point ax-data-point--undefined"
  cx={12}
  cy={12}
/>
`;

exports[`DataPoint renders with radius 1`] = `
<circle
  className="ax-data-point ax-data-point--undefined"
  cx={12}
  cy={12}
  r={10}
/>
`;
